namespaces/live-1.cloud-platform.service.justice.gov.uk/hmpps-workload-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-workload-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "manage_a_workforce_dev"
    cloud-platform.justice.gov.uk/application: "WMT"
    cloud-platform.justice.gov.uk/owner: "Manage a Workforce: mark.berridge@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/wmt-worker"
    cloud-platform.justice.gov.uk/team-name: "manage-a-sentence"
    cloud-platform.justice.gov.uk/review-after: "2021-08-27"
